# python_02

./: README.md
ex00/: ft_filter.py  ft_map.py  ft_reduce.py  test_00_python_02.py
ex01/: main.py
ex02/: logger.py
ex03/: csvreader.py
ex04/: LICENSE.md  build.sh  pyproject.toml  setup.cfg
ex04/my_minipack/: README.txt  logger.py  progressbar.py
ex05/: TinyStatistician.py
