# **************************************************************************** #
#                                                                              #
#                                                         :::      ::::::::    #
#    pyproject.toml                                     :+:      :+:    :+:    #
#                                                     +:+ +:+         +:+      #
#    By: joslopez <joslopez@student.42.fr>          +#+  +:+       +#+         #
#                                                 +#+#+#+#+#+   +#+            #
#    Created: 2023/04/16 19:34:56 by joslopez          #+#    #+#              #
#    Updated: 2023/04/16 19:35:00 by joslopez         ###   ########.fr        #
#                                                                              #
# **************************************************************************** #

[build-system]
requires = [
    "pip>=22",
    "setuptools>=60",
    "wheel"
]
build-backend = "setuptools.build_meta"