# **************************************************************************** #
#                                                                              #
#                                                         :::      ::::::::    #
#    setup.py                                           :+:      :+:    :+:    #
#                                                     +:+ +:+         +:+      #
#    By: joslopez <joslopez@student.42.fr>          +#+  +:+       +#+         #
#                                                 +#+#+#+#+#+   +#+            #
#    Created: 2023/04/16 19:11:10 by joslopez          #+#    #+#              #
#    Updated: 2023/04/16 19:28:28 by joslopez         ###   ########.fr        #
#                                                                              #
# **************************************************************************** #
    
[metadata]
name = my-minipack
version = 1.0.0
description = A small example package
url = None
author = joslopez
author_email = joslopez@student.42malaga.com
license = GPLv3
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Students
    Topic :: Education
    Topic :: HowTo
    Topic :: Package
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = my_minipack
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src